# mcu

./: .gitignore  README.md
01-blink/: CMakeLists.txt  main.c
02-control/: CMakeLists.txt  main.c
02-control/protocol_task/: protocol-task.c  protocol-task.h
02-echo/: CMakeLists.txt  main.c
02-printf/: CMakeLists.txt  main.c
03-adc/: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
03-adc/adc-task/: adc-task.c  adc-task.h
03-adc/protocol-task/: protocol-task.c  protocol-task.h
03-adc/stdio-task/: stdio-task.c
04-bme/: CMakeLists.txt  main.c  tph.py
04-bme/led-task/: led-task.c  led-task.h
05-display/: CMakeLists.txt  ds.py  main.c
05-display/led-task/: led-task.h
06-device/: CMakeLists.txt  disp_image.py  main.c
06-device/led-task/: led-task.c
06-device/protocol-task/: protocol-task.c  protocol-task.h
